# function_params_to_argparse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/function_params_to_argparse/: __init__.py  config.py
src/function_params_to_argparse/core/: __init__.py  parser.py
tests/: test_module.py  wrapper.py
