

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "function_params_to_argparse"
version = "0.0.1"
authors = [
  { name="Santo K Thomas", email="santokalayil@gmail.com" },
]
description = "A small python package to convert a python function to python module commandline args"


# include = ["tests/*", "CHANGELOG.md"]
# packages = [
#     { include = "my_package" },
#     { include = "extra_package/**/*.py" },
# ]


readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
"Homepage" = "https://github.com/santokalayil/function_params_to_argparse"
"Bug Tracker" = "https://github.com/santokalayil/function_params_to_argparse/issues"
